# prolipipe

./: .gitignore  .gitkeep  README.md  README.rst  all_taxons.tsv  complete_pipeline.py  pathways.py  pipeline.py  pipeline_yael.py  prolipipe.py  pyproject.toml  rename.py  requirements.txt
genomes/GCF_025188735-1/: GCF_025188735-1.fasta
genomes/GCF_025189665-1/: GCF_025189665-1.fasta
genomes/GCF_025211855-1/: GCF_025211855-1.fasta
prolipipe/: __init__.py  __main__.py  analysis.py  askomics.py  check.py  report.qmd  utils.py
separated_scripts/: README.md
side_scripts/: build_phylogeny_table.py  heatmap_pwy.py  visu_benchmark.py
src/: __init__.py  analysis.py  askomics.py  check.py  prolipipe.py  utils.py
toy_example/: all_taxons.tsv  pathway_pyruvate.txt  strains.tsv  toy_example_strains.tsv  toy_example_taxons.tsv
toy_example/genomes/Bifidobacterium_breve_689b_Complete/: Bifidobacterium_breve_689b_Complete.fna
toy_example/genomes/GCF_000091725-1/: GCF_000091725-1.fasta  MD5SUMS
toy_example/genomes/GCF_025187365-1/: GCF_025187365-1.fasta  MD5SUMS
toy_example/genomes/GCF_025188245-1/: GCF_025188245-1.fasta  MD5SUMS
toy_example/genomes/GCF_025188735-1/: MD5SUMS
toy_example/genomes/GCF_025189665-1/: MD5SUMS
toy_example/genomes/GCF_025190325-1/: GCF_025190325-1.fasta  MD5SUMS
toy_example/genomes/GCF_025191245-1/: GCF_025191245-1.fasta  MD5SUMS
toy_example/genomes/GCF_025193465-1/: GCF_025193465-1.fasta  MD5SUMS
toy_example/genomes/GCF_025193965-1/: GCF_025193965-1.fasta  MD5SUMS
toy_example/genomes/GCF_025211855-1/: MD5SUMS
toy_example/genomes/Lactococcus_lactis_1064-C11_Scaffold/: Lactococcus_lactis_1064-C11_Scaffold.fna
toy_example/genomes/Leuconostoc_lactis_1001262B_160229_C9_Scaffold/: Leuconostoc_lactis_1001262B_160229_C9_Scaffold.fna
toy_example/genomes/Streptococcus_thermophilus_CBC-S77_Scaffold/: Streptococcus_thermophilus_CBC-S77_Scaffold.fna
